fix: :bug: fixed overflow issue for the tab panel component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,3 +92,12 @@
 .ant-select-selector {
     @apply !p-2;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
